fix plurk_cnt overflow.

--- a/plurk.css
+++ b/plurk.css
@@ -156,7 +156,7 @@
 	border-radius: 5px 5px 5px 5px;
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.75);
 	opacity: 0.8;
-	width: 110%;
+	width: 100%;
 	z-index: 800;
 	transition: all 300ms ease;
 }
